# knokix

./: CMakeLists.txt
src/: main.cpp
src/core/: Application.cpp  Application.hpp
src/engine/: GameEngine.cpp  GameEngine.hpp
